ResetValuesHandler: cosmetics + internal utility and LazyActionListener optimization (avoid a 3x collection copy)
Signed-off-by: pizzi80 <paolo@given2.com>